--- a/sepolia/docker-compose.yml
+++ b/sepolia/docker-compose.yml
@@ -1,9 +1,7 @@
-version: "3.8"
-
 services:
 
   erigon:
-    image: thorax/erigon:v2.58.1
+    image: thorax/erigon:2.60.8
     user: "1000:1000"
     container_name: erigon-sepolia
     command: |
@@ -23,7 +21,7 @@ services:
       - jwt.hex
 
   prysm:
-    image: gcr.io/prysmaticlabs/prysm/beacon-chain:v5.0.1
+    image: gcr.io/prysmaticlabs/prysm/beacon-chain:v5.1.2
     container_name: prysm-sepolia
     command: |
       --sepolia --accept-terms-of-use --genesis-state=/genesis.ssz
